build/log/idf_py_stderr_output_42655
In file included from /home/pi/remoteLED/main/remoteLED.c:5:
/home/pi/remoteLED/main/remoteLED.c: In function 'fetch_switch_state':
/home/pi/remoteLED/main/remoteLED.c:156:61: error: 'auth_token' undeclared (first use in this function)
  156 |     ESP_LOGI(TAG, "auth_token in fetch_switch_state(): %s", auth_token);
      |                                                             ^~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:156:5: note: in expansion of macro 'ESP_LOGI'
  156 |     ESP_LOGI(TAG, "auth_token in fetch_switch_state(): %s", auth_token);
      |     ^~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:156:61: note: each undeclared identifier is reported only once for each function it appears in
  156 |     ESP_LOGI(TAG, "auth_token in fetch_switch_state(): %s", auth_token);
      |                                                             ^~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:156:5: note: in expansion of macro 'ESP_LOGI'
  156 |     ESP_LOGI(TAG, "auth_token in fetch_switch_state(): %s", auth_token);
      |     ^~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:160:26: error: '_http_event_handler' undeclared (first use in this function); did you mean 'http_event_handle_cb'?
  160 |         .event_handler = _http_event_handler,
      |                          ^~~~~~~~~~~~~~~~~~~
      |                          http_event_handle_cb
/home/pi/remoteLED/main/remoteLED.c: In function 'app_main':
/home/pi/remoteLED/main/remoteLED.c:323:5: error: implicit declaration of function 'get_auth_token' [-Wimplicit-function-declaration]
  323 |     get_auth_token();  // **Fetch Token Securely**
      |     ^~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
